--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                         </div>
                         <div>
                             <h4>Resume</h4>
-                            <a href="https://drive.google.com/file/d/1kcuGlR4iPotZ6Pq9cgi2KZre9_OGilL7/view?usp=sharing" class="resume-link">Download PDF</a>
+                            <a href="https://drive.google.com/file/d/1ZvoxO64Yy5uWr1HpNJgxr1PKoQ3RwhqI/view?usp=drive_link" class="resume-link">Download PDF</a>
                         </div>
                     </div>
                     
