--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <p>I create beautiful, functional websites and applications with a focus on user experience and clean code.</p>
                     <div class="hero-buttons">
                         <a href="#projects" class="btn-primary">View My Work</a>
-                        <a href="#contact" class="btn-secondary">Contact Me</a>
+                        <a href="https://drive.google.com/file/d/1ZvoxO64Yy5uWr1HpNJgxr1PKoQ3RwhqI/view?usp=drive_link" class="btn-secondary">Download Resume</a>
                     </div>
                 </div>
                 <div class="hero-image">
