--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           a keen interest in UI/UX principles. Passionate about building
           responsive, visually engaging, and user-centric websites.
      </p>
-     <a class="inline-block mt-8 px-6 py-3 bg-indigo-600 text-white font-semibold rounded-md shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 transition" download="" href="Your_CV.pdf">
+     <a class="inline-block mt-8 px-6 py-3 bg-indigo-600 text-white font-semibold rounded-md shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 transition" download="" href="/Katherine Opulencia - Resume.pdf">
       Download CV
      </a>
     </div>
@@ -334,7 +334,7 @@
      CV / Contact
     </h2>
     <div class="max-w-3xl mx-auto flex flex-col sm:flex-row items-center justify-center gap-8">
-     <a aria-label="Download CV as PDF" class="inline-flex items-center justify-center px-8 py-4 bg-indigo-600 text-white font-semibold rounded-md shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 transition w-full sm:w-auto" download="" href="Your_CV.pdf">
+     <a aria-label="Download CV as PDF" class="inline-flex items-center justify-center px-8 py-4 bg-indigo-600 text-white font-semibold rounded-md shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 transition w-full sm:w-auto" download="" href="/Katherine Opulencia - Resume.pdf">
       <i class="fas fa-download mr-3">
       </i>
       Download CV
